Fri Jan 12 15:40:08 PST 2007 William Brack <wbrack@mmm.com.hk>

	* configure.in: fixed problem with DV/WMB testing env.
	* regenerated docs; doc/APIchunk1[012].html added to SVN
	* libxslt/extensions.c: fixed problem with plugin loading;
	  removed testplugin.c from SVN (current version kept as
	  tests/plugin/testplugin.c)

Thu Jan 11 11:08:18 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: enhanced to ignore empty text node
	  in xsltDefaultProcessOneNode (avoid calling xsltCopyText)
	  (bug #354900)
	* xsltproc/xsltproc.c: added check for output file problem,
	  yielding new error code 11 (Mike Hommey).
	* doc/xsltproc.html, doc/xsltproc.xml: added documentation
	  for above, regenerated docs (doc/xsltproc.1)

Wed Jan 10 19:13:08 PST 2007 William Brack <wbrack@mmm.com.hk>

	* libexslt/strings.c: added new function 'replace' from Joel
	  Reed.
	* tests/exslt/Makefile.am, replace.1.xml, replace.1.xsl,
	  replace.1.out: added new test case for above.
	* libxslt.spec.in: trivial change from 'Gnome' to 'GNOME'
	* configure.in: trivial change for flags on my compilations
	* libxslt/documents.c, libxslt/documents.h, libxslt/keys.c,
	  libxslt/keys.h, libxslt/variables.c, libxslt/templates.c,
	  libxslt/transform.c, libxslt/variables.c, libxslt/xslt.c,
	  libxslt/xsltutils.c: fixed some documentation/comments and
	  compilation warnings - no change to logic.
	* re-generated the documentation.

Wed Jan  3 16:46:05 CET 2007 Daniel Veillard <daniel@veillard.com>

	* configure.in: adapt the extra versioning code to SVN

Fri Dec 22 09:12:08 PST 2006 William Brack <wbrack@mmm.com.hk>

	* python/libxslt.c: applied patch supplied by Kjartan Maraas
	  (bug #388567).

Mon Dec 11 14:38:22 PST 2006 William Brack <wbrack@mmm.com.hk>

	* libexslt/functions.c: further enhancement to the original
	  fix for bug #381319 (which was not correct).
	* tests/exslt/functions: minor enhancement to function.9.xsl;